2012-08-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: allow a whole tabgroup to be added to
	another tabgroup (or a single) window. [fuchur]

	* lisp/sawfish/wm/keymaps.jl: bind tabgroup-add-to-group to
	'C-Button2-Off' in titlebar/tabbar-keymap. [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: various bugfixes in raising,
	stickying, move-resizeing and tab-index. [fuchur]

	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: only allow
	'_NET_WM_WINDOW_TYPE_NORMAL to be marked as a tabbed window. [fuchur]

	* man/news.texi: update

2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makedefs.in: include $(repexecdir)/rules.mk as first,
	so that --prefix & co. from configure don't get overwritten.
	[Allin Cottrell]

	* man/news.texi: update

2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]

	* lisp/sawfish/wm/tabs/tab.jl: implement mark-window here,
	fix an issue that tab didn't work anymore then a window
	selected for tabbing doesn't exist before tabbing was done.
	Change cursor shape when operating with tabs [fuchur]

	* man/news.texi: update

2012-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/*.links: removed, fixed building on Debian Unstable

2012-07-07  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/razor-qt.jl: add 'razor-about' to help
	sub-menu

	* configure.in: bump version to 1.9.1

	* man/news.texi: update

2012-07-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/match-window.jl: call resize-window-with-hints*
	rather than resize-window-with-hints (fixes 'dimensions matcher)
	[Robert Zenz]
	
	* src/images.c: replace gdk_pixbuf_unref with g_object_unref [Togan Muftouglu]

	* src/windows.c: proper return in fake-release-window [Togan Muftouglu]

	COPYING
	lisp/sawfish/cfg/apply.jl
	lisp/sawfish/cfg/config.jl
	lisp/sawfish/cfg/group.jl
	lisp/sawfish/cfg/i18n.jl