@@ -1,3 +1,6 @@
+2012-08-29  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/tabs/tab.jl: remember default cursor [fuchur]
+
 2012-08-28  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: allow a whole tabgroup to be added to
 	another tabgroup (or a single) window. [fuchur]
